handle captions and innertable frames identical if the containing block is to small, bug 76726 r=karnaze sr=waterson